--- a/css/thearter.css
+++ b/css/thearter.css
@@ -13,10 +13,31 @@ section h2{
     margin-bottom: 10px;
     font-size: 2.5rem;
 }
-.categoryBtns{margin-bottom: 30px;}
+.mobileChooseArea{
+    display: none;
+    height: 25px;
+    line-height: 25px;
+    background: #e71a0f;
+    color: #efefef;
+    text-align: center;
+    font-weight: 700;
+}
+.thearterlistContainner{
+    overflow: hidden;
+    height: 450px;
+    margin-bottom: 30px;
+}
+.categoryBtns{
+    float: left;
+    width: 12.5%;
+}
 .categoryBtns button{
+    display: block;
+    width: 100%;
+/*
     float: left;
     width: 11.1111%;
+*/
     height: 50px;
     line-height: 50px;
     border: 1px solid #ccc;
@@ -25,11 +46,52 @@ section h2{
 }
 .categoryBtns button.on,
 .categoryBtns button:hover{
-    border-bottom: none;
     background: #fff;
     color:#e71a0f;
+    border-right: none;
 }
+
+.thearterList{
+    overflow-y: auto;
+    float: left;
+    width: 87.5%;
+    height: 100%;
+    box-sizing: border-box;
+/*
+    background: #000;
+    color: #efefef;
+*/
+}
+.thearterList {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+.thearterList::-webkit-scrollbar {
+    display: none;
+}
+.thearterList li{
+    float: left;
+    width: 25%;
+    height: 50px;
+    line-height: 30px;
+}
+.thearterList li button{
+    width: 100%;
+    height: 100%;
+    padding: 0 15px;
+    transition: all 0.5s;
+}
+.thearterList li button.on,
+.thearterList li button:hover{
+    background: #e71a0f;
+    color: #fff;
+}
+
+
+
+
 main .content{min-height: 500px; }
+/*
 .eventListContainer li{
     float: left;
     width: 24%;
@@ -49,8 +111,10 @@ main .content{min-height: 500px; }
     margin-bottom: 10px;
     font-size: 1.4rem
 }
+*/
 
 @media all and (max-width:1023px){
+/*
     .categoryBtns button{
         width: 33.3333%;
     }
@@ -62,8 +126,10 @@ main .content{min-height: 500px; }
     .eventListContainer li:nth-child(4n){margin-right: 1.5000%;}
     .eventListContainer li:nth-child(3n){margin-right: 0;}
 }
+*/
 
 @media all and (max-width:767px){
+/*
     .categoryBtns button{
         width: 33.3333%;
     }
@@ -74,4 +140,5 @@ main .content{min-height: 500px; }
         margin: 0 0 2%;
     }
     .eventListContainer li:nth-child(4n){margin-right: 0;}
+*/
 }
